Fixes by review and sonar.